force-app/main/default/objects/May3Object__c/May3Object__c.object-meta.xml
<CustomObject>
    <label>May3Object</label>
    <nameField>
        <label>May3Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>May3Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>