force-app/main/default/objects/May3Object__c/fields/May3Object_Date__c.field-meta.xml
<CustomField>
    <fullName>May3Object_Date__c</fullName>
    <label>May3Object Date</label>
    <type>Date</type>
</CustomField>