force-app/main/default/objects/May3Object__c/fields/May3Object_Number__c.field-meta.xml
<CustomField>
    <fullName>May3Object_Number__c</fullName>
    <label>May3Object Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>