force-app/main/default/objects/May3Object__c/fields/May3Object_Text__c.field-meta.xml
<CustomField>
    <fullName>May3Object_Text__c</fullName>
    <label>May3Object Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>